# group-based-policy

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  TESTING.rst  groups  lower-constraints.txt  new.txt  old.txt  openstack-common.conf  project.config  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  test.txt  tox.ini
devstack/: README-NFP  README-NFP-Advanced-Mode  README-NFP-Base-Mode  local-gbp.conf  local.conf.nfp  override-defaults  plugin.sh  settings
devstack/exercises/nfp_service/: fw_base_vm.sh  fw_base_vm_clean.sh  lb_base.sh  lb_base_clean.sh
devstack/exercises/nfp_service/user-data/: configurator_user_data
devstack/lib/: apic_aim  gbp  group-based-policy  nfp  nsx
diskimage-create/: conf.json  disk_image_create.py  requirements.txt
diskimage-create/elements/nfp-reference-configurator/extra-data.d/: 1-cp
diskimage-create/elements/nfp-reference-configurator/install.d/: 99-nfp-service
diskimage-create/elements/nfp-reference-configurator/post-install.d/: 1-pkgs  99-nfp-service
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/devref/: abstraction.rst  apic-aim-ml2-driver.rst  automation.rst  development.environment.rst  extension-drivers.rst  external-connectivity.rst  floating-ip-support.rst  group-policy-apic-driver.rst  heat-support.rst  index.rst  initial-qos-support.rst  inject-default-route-attr.rst  introduce-shared-attribute.rst  network-service-policy.rst  neutron-qos-support.rst  nsx-policy-driver.rst  nuage-gbp-driver.rst  nuage-group-policy-driver.rst  oc-nvsd-driver.rst  oc-nvsd-servicechain-driver.rst  odl-policy-driver.rst  policy-target-cluster-id.rst  refactor-neutron-restful-api.rst  resource-status.rst  service-chain-driver-refactor.rst  service-chain-driver.rst  service-chaining.rst  shared-resources.rst  traffic-stitching-plumber-model.rst  traffic-stitching-plumber-placement-type.rst  traffic-stitching-plumber.rst
doc/source/devref/images/: README
etc/: apic_mapping.ini  grouppolicy.ini  neutron-policy.json  policy.json  test-policy.json
etc/drivers/: chain_mapping.ini  implicit_policy.ini  resource_mapping.ini
etc/servicechain/: servicechain.ini
etc/servicechain/plugins/msc/: servicechain.ini  simplechain.ini
gbp/neutron/db/: servicechain_db.py
gbp/neutron/db/grouppolicy/: group_policy_db.py  group_policy_mapping_db.py
gbp/neutron/db/migration/: cli.py
gbp/neutron/extensions/: group_policy.py  group_policy_mapping.py  servicechain.py
gbp/neutron/services/grouppolicy/: config.py  extension_manager.py  group_policy_context.py  group_policy_driver_api.py  plugin.py  policy_driver_manager.py
gbp/neutron/services/servicechain/: config.py  driver_manager.py  servicechain_context.py  servicechain_plugin.py
gbp/neutron/tests/unit/: common.py  test_extension_group_policy.py  test_extension_group_policy_mapping.py  test_extension_servicechain.py
gbp/openstack/common/: cliutils.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  strutils.py
gbp/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py
gbp/openstack/common/config/: generator.py
gbp/tests/: base.py  test_gbp.py
gbpservice/: __init__.py  _i18n.py
gbpservice/common/: constants.py  neutron_patches.py  utils.py
gbpservice/contrib/nfp/configurator/: Dockerfile  run.sh
gbpservice/contrib/nfp/tools/: setup_nfp.py
gbpservice/network/neutronv2/: api.py  client.py  local_api.py
gbpservice/neutron/agent/linux/: apic_dhcp.py
gbpservice/neutron/agent/metadata/: namespace_proxy.py
gbpservice/neutron/agent/topology/: apic_topology.py  rpc.py
gbpservice/neutron/common/: constants.py
gbpservice/neutron/config/: nsf  nsf.ini
gbpservice/neutron/db/: all_models.py  gbp_quota_db.py  implicitsubnetpool_db.py  lastresortsubnetpool_db.py  port_ep_db.py  servicechain_db.py  traffic_steering_db.py  trafficsteering_db.py
gbpservice/neutron/db/grouppolicy/: group_policy_db.py  group_policy_mapping_db.py
gbpservice/neutron/db/migration/: cli.py
gbpservice/neutron/extensions/: __init__.py  aim_driver_ext.py  apic_allowed_vm_name.py  apic_intra_ptg.py  apic_mapping_driver_ext.py  apic_port_ep.py  apic_reuse_bd.py  apic_segmentation_label.py  cisco_apic.py  cisco_apic_gbp.py  cisco_apic_l3.py  driver_proxy_group.py  group_policy.py  group_policy_mapping.py  implicit_subnetpools.py  last_resort_subnetpools.py  patch.py  patch_ml2.py  servicechain.py  trafficsteering.py
gbpservice/neutron/extensions/patches/: patch_ml2.py
gbpservice/neutron/nsf/: RestClientOverUnix.py
gbpservice/neutron/nsf/core/: cfg.py  lahq.py  lb.py  main.py  periodic_task.py  unix.py  (+2 more)
gbpservice/nfp/base_configurator/: base_controller.py
gbpservice/nfp/common/: constants.py  data_formatter.py  exceptions.py  topics.py  utils.py
gbpservice/nfp/configurator/: run.sh
gbpservice/nfp/core/: cfg.py  common.py  context.py  controller.py  event.py  event_lb.py  executor.py  fifo.py  launcher.py  log.py  main.py  manager.py  module.py  path.py  poll.py  rpc.py  rpc_lb.py  sequencer.py  threadpool.py  watchdog.py  worker.py
gbpservice/nfp/devstack/: override-defaults  plugin.sh  settings
gbpservice/nfp/lib/: RestClientOverUnix.py  nfp_context_manager.py  nfp_exceptions.py  rest_client_over_unix.py  transport.py
gbpservice/nfp/orchestrator/: context.py
gbpservice/nfp/pecan/: base_controller.py  constants.py
gbpservice/nfp/utils/: forked_pdb.py
gbpservice/tests/: base.py  test_gbp.py
gbpservice/tests/contrib/: README  filters.template  functions-gbp  gate_aim_hook.sh  gate_hook.sh  gate_nfp_hook.sh  post_test_hook.sh  post_test_nfp_hook.sh  post_test_rally_hook.sh
gbpservice/tests/functional/: test_policy_mapping_driver.py
gbpservice/tests/nfp/: test_process_model.py
gbpservice/tools/: check_unit_test_structure.sh
gbpservice/tools/validate/: cli.py
tools/: install_venv.py  ostestr_compat_shim.sh  tox_install.sh
tools/config/: check_uptodate.sh  generate_sample.sh
(+742 files in other folders)
